- Remove 'ReferImporter' from considering it as potential importer in case of unknown file format - Add Refer/BibIX file in ImportFormatReaderIntegrationTest - Update JabRef_en.properties - Minor change to store notes for Refer/BibIX - Minor format change in 'ReferImporterTest' - Add CHANGELOG.md entry